--- a/src/arctransport/ihm/IHMcourses.form
+++ b/src/arctransport/ihm/IHMcourses.form
@@ -26,34 +26,69 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jScrollPane1" min="-2" pref="206" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="95" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="52" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="addCourse" min="-2" max="-2" attributes="0"/>
-                  <Component id="updateCourse" min="-2" max="-2" attributes="0"/>
-                  <Component id="deleteCourse" min="-2" max="-2" attributes="0"/>
+                  <Group type="102" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="DateDebut" min="-2" max="-2" attributes="0"/>
+                          <Component id="DateFin" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace pref="185" max="32767" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="addCourse" min="-2" max="-2" attributes="0"/>
+                          <Component id="deleteCourse" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="-2" pref="57" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="Distance" min="-2" max="-2" attributes="0"/>
+                          <Component id="Chauffeur" min="-2" max="-2" attributes="0"/>
+                          <Component id="Vehicule" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace max="32767" attributes="0"/>
+                  </Group>
               </Group>
-              <EmptySpace pref="279" max="32767" attributes="0"/>
+          </Group>
+          <Group type="102" alignment="1" attributes="0">
+              <EmptySpace max="32767" attributes="0"/>
+              <Component id="Sauvegarder" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="47" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
+              <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jScrollPane1" min="-2" pref="193" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
-                      <Component id="addCourse" min="-2" max="-2" attributes="0"/>
+                  <Component id="jScrollPane1" min="-2" pref="193" max="-2" attributes="0"/>
+                  <Group type="102" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
+                              <Component id="addCourse" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="3" attributes="0">
+                                  <Component id="deleteCourse" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="DateFin" alignment="3" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Component id="Distance" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
+                              <Component id="DateDebut" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                      </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="updateCourse" min="-2" max="-2" attributes="0"/>
+                      <Component id="Chauffeur" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="deleteCourse" min="-2" max="-2" attributes="0"/>
+                      <Component id="Vehicule" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace pref="298" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="47" max="-2" attributes="0"/>
+              <Component id="Sauvegarder" min="-2" max="-2" attributes="0"/>
+              <EmptySpace pref="41" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -92,14 +127,39 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addCourseActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="updateCourse">
+    <Component class="javax.swing.JButton" name="Sauvegarder">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Modifier course"/>
+        <Property name="text" type="java.lang.String" value="Sauvegarder"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="deleteCourse">
       <Properties>
         <Property name="text" type="java.lang.String" value="Supprimer course"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="Distance">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Distance"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="DateDebut">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Date de d&#xe9;but"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="DateFin">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Date de fin"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="Chauffeur">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Chauffeur"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="Vehicule">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="V&#xe9;hicule"/>
       </Properties>
     </Component>
   </SubComponents>
